# motion

./: .gitignore  CMakeLists.txt  Makefile.in  README.MacOSX  conf.c  conf.h  config.h.in  event.c  motion.c  motion.h  picture.c  video_common.c
cmake/Modules/: FindMMAL.cmake
